--- a/src/components/column/Column.module.css
+++ b/src/components/column/Column.module.css
@@ -6,7 +6,7 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   flex-shrink: 0;
 }
-.column-title {
+.columnTitle {
   font-size: 1.2rem;
   margin-bottom: 10px;
   font-weight: bold;
@@ -18,21 +18,35 @@
   margin-bottom: 10px;
   cursor: grab;
 }
-.add-task {
+.addTask {
   margin-top: 10px;
   padding: 8px;
-  background-color: #007bff;
+
   color: white;
   border: none;
   border-radius: 5px;
   width: 100%;
+  background-color: #4caf50;
   cursor: pointer;
 }
-.add-task:hover {
-  background-color: #0056b3;
+.addTask:hover {
+  background-color: #45a049;
 }
-.task-list {
+.taskList {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 30px;
+  margin-bottom: 40px;
+  margin-left: 70px;
+}
+.taskElement {
+  padding: 15px 55px;
+  border: 2px solid #333;
+  border-radius: 6px;
+  color: #282a2e;
+  background-color: #ffffff;
+  /* box-shadow: -15px 15px 0 0 #18191c; */
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
 }
