--- a/src/components/column/Column.module.css
+++ b/src/components/column/Column.module.css
@@ -40,13 +40,33 @@
   margin-left: 70px;
 }
 .taskElement {
+  display: flex;
+  justify-content: space-between;
+
+  align-items: center;
+  margin-right: 10px;
   padding: 15px 55px;
   border: 2px solid #333;
   border-radius: 6px;
   color: #282a2e;
   background-color: #ffffff;
-  /* box-shadow: -15px 15px 0 0 #18191c; */
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
+}
+.deleteButton {
+  background-color: #fff;
+
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.2em 0.8em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+.deleteButton:hover {
+  border-color: #e92222;
 }
